# recmari

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  tasks.md
.claude/: settings.json
crates/recmari/: Cargo.toml
crates/recmari-core/: Cargo.toml
crates/recmari-core/src/: debug.rs  lib.rs  pipeline.rs  rect.rs
crates/recmari-core/src/analysis/: common.rs  health.rs  hud.rs  mod.rs
crates/recmari-core/src/analysis/huds/: manemon.rs  mod.rs
crates/recmari-core/src/analysis/huds/manemon/: hp.rs  mod.rs  od.rs  position.rs  sa.rs
crates/recmari-core/src/config/: regions.rs
crates/recmari-core/src/video/: decoder.rs  frame.rs
crates/recmari-proto/: Cargo.toml  build.rs
crates/recmari-proto/src/: lib.rs
crates/recmari/src/: cli.rs  main.rs
proto/: recmari.proto
