[package]
name = "recmari"
version = "0.1.0"
edition = "2021"

[dependencies]
recmari-core = { path = "../recmari-core" }
recmari-proto = { path = "../recmari-proto" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
